--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <html>
-<head><title>anoce.github.io</title></head>
+<head><title>andreshans.github.io</title></head>
 <code>
 <a href="https://gitlab.com/andres.hans">gitlab/</a><br>
 <a href="https://github.com/andreshans/">github/</a><br>
 <a href="https://www.linkedin.com/in/andresnoce/">linkedin/</a><br>
+<a href="resume.pdf">CV-OscarAndresNoce.pdf</a><br>
+contact me through email at: andres.hans@gmail.com
 </code>
 </body>
 </html>
