change gitlab profile

--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <html>
 <head><title>andreshans.github.io</title></head>
 <code>
-<a href="https://gitlab.com/andres.hans">gitlab/</a><br>
+<br>
+<a href="https://gitlab.com/andreshans">gitlab/</a><br>
 <a href="https://github.com/andreshans/">github/</a><br>
 <a href="https://www.linkedin.com/in/andresnoce/">linkedin/</a><br>
 <a href="resume.pdf">CV-OscarAndresNoce.pdf</a><br>
-contact me through email at: andres.hans@gmail.com
+<br>
+contact me through email at: andres.hans@gmail.com <br>
+or telegram me at https://t.me/andreshans
 </code>
 </body>
 </html>
