--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
-<html>
-<head><title>andreshans.github.io</title></head>
-<code>
-<br>
-<a href="https://gitlab.com/andreshans">gitlab/</a><br>
-<a href="https://github.com/andreshans/">github/</a><br>
-<a href="https://www.linkedin.com/in/andresnoce/">linkedin/</a><br>
-<a href="resume.pdf">CV-OscarAndresNoce.pdf</a><br>
-<br>
-contact me through email at: andres.hans@gmail.com <br>
-or telegram me at https://t.me/andreshans
-</code>
-</body>
+<!DOCTYPE HTML>
+<html lang="en-US">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="refresh" content="0; url=https://andreshans.gitlab.io/">
+        <script type="text/javascript">
+            window.location.href = "https://andreshans.gitlab.io/"
+        </script>
+        <title>Page Redirection</title>
+    </head>
+    <body>
+        <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
+        If you are not redirected automatically, follow this <a href='https://andreshans.gitlab.io/'>link to example</a>.
+    </body>
 </html>
